Apply CVE-2022-24765 workaround for git run in container

--- a/build
+++ b/build
@@ -16,6 +16,9 @@ docker run --rm -t \
   --entrypoint "/sbin/tini" \
   -v "$CURRENT_DIR:$MOUNT_DIR" \
   -w "$MOUNT_DIR" \
-  "${GORELEASER_IMAGE}" -- sh -c "/entrypoint.sh --rm-dist $@ && rm ./dist/goreleaser/artifacts.json"
+  "${GORELEASER_IMAGE}" \
+  -- sh -c "git config --global --add safe.directory /summon && \
+    /entrypoint.sh --rm-dist $@ && \
+    rm ./dist/goreleaser/artifacts.json"
 
 echo "Releases built. Archives can be found in dist/goreleaser"
